--- a/config.yml
+++ b/config.yml
@@ -33,3 +33,15 @@ menu:
           name: Publications
           url: /publications/
           weight: 10
+        - identifier: awards
+          name: Awards
+          url: /awards/
+          weight: 20
+        - identifier: media
+          name: Media
+          url: /media/
+          weight: 30
+        - identifier: outreach
+          name: Outreach
+          url: /outreach/
+          weight: 40
