--- a/config.yml
+++ b/config.yml
@@ -29,19 +29,27 @@ params:
 
 menu:
     main:
+        - identifier: home
+          name: Home
+          url: /
+          weight: 10
         - identifier: publications
           name: Publications
           url: /publications/
-          weight: 10
+          weight: 20
         - identifier: awards
           name: Awards
           url: /awards/
-          weight: 20
+          weight: 30
         - identifier: media
           name: Media
           url: /media/
-          weight: 30
+          weight: 40
         - identifier: outreach
           name: Outreach
           url: /outreach/
-          weight: 40
+          weight: 50
+        - identifier: projects
+          name: Projects
+          url: /projects/
+          weight: 60
