--- a/config.yml
+++ b/config.yml
@@ -52,3 +52,7 @@ menu:
           name: Projects
           url: /projects/
           weight: 60
+        - identifier: contact
+          name: Contact
+          url: /contact/
+          weight: 70
