--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://tesaunders.github.io/"
+baseURL: "https://tomsaunders.me/"
 languageCode: en-us
 theme: PaperMod
 enableEmoji: true
